# DemoTape

./: .clang-format  CMakeLists.txt  DemoTape.jucer  README.md  build.bat  clean_build.bat  cmd.ps1  ignorefile.gitignore  juce_modules.cmake  setup_rive_runtime.ps1
Builds/StaticLib1/: StaticLib1.vcxproj
JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
Resource/: demo_tape_vst.riv
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RiveComponent.cpp  RiveComponent.h  RiveDemo.h  RiveFactory.h  RiveOpenGLRenderer.cpp  RiveOpenGLRenderer.h  RiveTestApp.cpp  juce_config.h
StubHeaders/rive/: artboard.hpp  file.hpp  refcnt.hpp  render_buffer.hpp  render_image.hpp  render_paint.hpp  render_path.hpp  renderer.hpp  renderer_paint_style.hpp
StubHeaders/rive/math/: mat2d.hpp
StubHeaders/rive/shapes/paint/: blend_mode.hpp  color.hpp  stroke_cap.hpp  stroke_join.hpp
